--- a/quiz app/quiz.css
+++ b/quiz app/quiz.css
@@ -9,7 +9,7 @@
     background-color: #f2f2f2;
    }
    
-   .container {
+   .html {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
